# django-bolt

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  justfile  pyproject.toml  renovate.json  rust-toolchain.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yml  bolt-mcp.yml  docs.yml  lint.yml
bench/: BENCHMARK_BASELINE.md  BENCHMARK_DEV.md
docs/: zensical.toml
docs/src/: index.md
python/bolt-mcp/: README.md  pyproject.toml
python/bolt-mcp/src/bolt_mcp/: __init__.py  _execute.py  autoexpose.py  context.py  registry.py  schema.py  server.py  sessions.py  transport.py  types.py
python/bolt-mcp/src/bolt_mcp/oauth/: __init__.py  apps.py  config.py  consent.py  endpoints.py  metadata.py  models.py  pkce.py  sessions.py  store.py  tokens.py
python/bolt-mcp/src/bolt_mcp/oauth/migrations/: 0001_initial.py
python/bolt-mcp/tests/: _helpers.py  conftest.py  test_auth_tier1.py  test_auth_tier2.py  test_autoexpose.py  test_context.py  test_expose_handlers.py  test_initialize.py  test_mount_method.py  test_negotiation.py  test_oauth_as.py  test_resources_prompts.py  test_schema.py  test_sessions.py  test_sse_errors.py  test_streaming.py  test_tools_call.py
python/bolt-mcp/tests/integration/: conftest.py  test_mcp_auth_integration.py  test_mcp_features_integration.py  test_mcp_oauth_integration.py  test_mcp_sample_integration.py  test_mcp_server_integration.py  test_mcp_sse_integration.py
python/django_bolt/: api.py  responses.py
python/tests/: conftest.py  test_asgi_mount.py  test_cookies.py  test_cors_404_and_post_only.py  test_depends_request_analysis.py  test_django_middleware_integration.py  test_event_source_response.py  test_form_list_extractors.py  test_jwt_auth.py  test_lifecycle_hooks.py  test_middleware_server.py  test_openapi_docs.py  test_openapi_metadata.py  test_openapi_schema_accuracy.py  test_openapi_spec_validity.py  test_orm_analysis.py  test_request_meta.py  test_request_with_typed_params.py  test_syntax.py  (+8 more)
scripts/: benchmark.sh  benchmark_params.sh  install_hey.sh
src/: form_parsing.rs  handler.rs  lib.rs  metadata.rs  response_builder.rs  server.rs  state.rs  static_files.rs  streaming.rs  streaming_compression.rs  testing.rs
(+31 files in other folders)
